--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,27 +1,53 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Press+Start+2P&display=swap');
+$theme-primary: #222;
+$theme-secondary: #009688;
 
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap');
+@import 'multi-select-accordion';
 
 body {
   margin: 0;
-  background-color: #614cb6; 
+  background-color: $theme-secondary;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%2300b4a3' fill-opacity='0.4'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
 }
-
-.l--center {
+  .l--center {
   display: flex;
-  height: 100vh;
-  color: white;
   flex-direction: column;
   align-content: center;
   justify-content: center;
   padding: 0 1rem;
+  margin: 5rem auto;
+  max-width: 40rem;
+}
+
+.note-card {
+  padding: 0.25rem;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: 'Roboto Slab', serif;
+  text-decoration: none;
+  font-size: 1.5rem;
+  box-sizing: border-box;
+  color: $theme-primary;
+  box-shadow: inset 0 -0.1rem 0 $theme-primary;
+  transition: width 200ms linear, box-shadow 200ms linear 200ms;
+  background-color: $theme-secondary;
+  font-family: 'Playfair Display', serif;
+
+  &:hover {
+    width: 100%;
+    box-shadow: inset 0 -0.3rem 0 $theme-primary;
+  }
 }
 
 h1 {
-  font-family: 'Press Start 2P', cursive;
-  font-size: 2rem;
-  text-align: center;
+  font-family: 'Playfair Display', serif;
+  font-size: 4rem;
+  text-align: left;
   line-height: 1.5;
-  margin-bottom: 0.25rem;
+  margin: 2rem 0 4rem;
+  color: #222;
 }
 
 p {
@@ -34,10 +60,6 @@ p {
 @media (min-width: 50rem) {  
   .l--center {
     padding: 0;
-  }
-
-  h1 {
-    font-size: 3rem;
   }
 
   p {
