--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -2,6 +2,7 @@ $theme-primary: #222;
 $theme-secondary: #009688;
 
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap');
+@import 'element.text';
 @import 'multi-select-accordion';
 
 body {
@@ -9,7 +10,8 @@ body {
   background-color: $theme-secondary;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%2300b4a3' fill-opacity='0.4'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
 }
-  .l--center {
+
+.l--center {
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -57,7 +59,7 @@ p {
   text-align: center;
 }
 
-@media (min-width: 50rem) {  
+@media (min-width: 50rem) {
   .l--center {
     padding: 0;
   }
