:sushi: update theming

--- a/src/scss/_element.text.scss
+++ b/src/scss/_element.text.scss
@@ -1,5 +1,5 @@
 .component-heading {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
-  margin: 6rem auto 3rem;
+  margin: 0 auto 3rem;
 }
