--- a/src/scss/_multi-select-accordion.scss
+++ b/src/scss/_multi-select-accordion.scss
@@ -54,7 +54,7 @@
     padding: 0.875rem;
     margin-left: 0;
     margin-top: -0.25rem;
-    background-color: lighten($theme-secondary, 5%);
+    background-color: lighten(#7b80b5, 5%);
     color: $theme-primary;
     line-height: 1.5;
     font-family: sans-serif;
