--- a/src/scss/_element.text.scss
+++ b/src/scss/_element.text.scss
@@ -3,3 +3,23 @@
   text-align: center;
   margin: 0 auto 3rem;
 }
+
+h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 4rem;
+  text-align: left;
+  line-height: 1.5;
+  margin: 2rem 0 4rem;
+  color: #222;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.875rem;
+  margin-bottom: 0;
+  text-align: center;
+
+  @media (min-width: 50rem) {
+    font-size: 1.25rem;
+  }
+}
