--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,94 +1,9 @@
-$theme-primary: #222;
-$theme-secondary: #33a59b;
-$theme-ternary: #6D9DC5;
-
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap');
+
+@import 'theme';
+@import 'generalize';
+@import 'layout';
 @import 'element.text';
+@import 'note-card';
 @import 'modal';
 @import 'multi-select-accordion';
-
-body {
-  margin: 5rem;
-}
-
-.theme-home {
-  background-color: $theme-secondary;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23378d85' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}
-
-
-.theme-modal {
-  background-color: $theme-ternary;
-}
-
-.theme-accordion {
-  background-color: #7b80b5;
-}
-
-.l--border {
-  min-height: 73vh;
-  padding: 3rem;
-  box-sizing: border-box;
-}
-
-.l--center {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
-  padding: 0 1rem;
-  margin: 5rem auto;
-  max-width: 40rem;
-}
-
-.note-card {
-  padding: 0.25rem;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-family: 'Roboto Slab', serif;
-  text-decoration: none;
-  font-size: 1.5rem;
-  box-sizing: border-box;
-  color: $theme-primary;
-  box-shadow: inset 0 -0.1rem 0 $theme-primary;
-  transition: all 200ms linear, box-shadow 200ms linear;
-  font-family: 'Playfair Display', serif;
-
-  &:hover {
-    box-shadow: inset 0 -0.25rem 0 #E7DFC6;
-    color: #E7DFC6;
-    background-color: rgba(0, 0, 0, 0.15);
-  }
-
-  & + & {
-    margin-top: 2rem;
-  }
-}
-
-h1 {
-  font-family: 'Playfair Display', serif;
-  font-size: 4rem;
-  text-align: left;
-  line-height: 1.5;
-  margin: 2rem 0 4rem;
-  color: #222;
-}
-
-p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 0.875rem;
-  margin-bottom: 0;
-  text-align: center;
-}
-
-@media (min-width: 50rem) {
-  .l--center {
-    padding: 0;
-  }
-
-  p {
-    font-size: 1.25rem;
-  }
-}
