:lemon: :sushi: add tabs js & update markup and styles

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,8 +1,8 @@
 extends ../layout
 
 block variables
-  - let title = 'Redesign';
-  - let description = 'ingredients for building modern, performant, accessible websites';
+  - let title = 'Building Blocks';
+  - let description = 'components for building modern, performant, accessible websites';
   - let pageClass = 'theme-showcase';
   - let mainClass = 'showcase';
 
@@ -17,9 +17,5 @@ block content
         h2 Accordion
       a(href="./modal.html").card
         h2 Modal
-      a(href="#").card
+      a(href="./tabs.html").card
         h2 Tabs
-      a(href="#").card
-        h2 Carousel
-      a(href="#").card
-        h2 Notification
