--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,6 +1,10 @@
+body {
+  margin: 0;
+}
+
 .l--border {
-  min-height: 73vh;
-  padding: 3rem;
+  min-height: 100vh;
+  padding: 3rem 0;
   box-sizing: border-box;
 }
 
