--- a/src/scss/_multi-select-accordion.scss
+++ b/src/scss/_multi-select-accordion.scss
@@ -5,10 +5,10 @@
   &__button {
     text-align: left;
     font-size: 1rem;
-    font-family: 'Poppins', sans-serif;
+    font-family: $font-secondary;
     font-weight: 500;
     background-color: $theme-primary;
-    color: #fff;
+    color: $c-white;
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
@@ -27,8 +27,8 @@
       top: 0.75rem;
       width: 0.4rem;
       height: 0.4rem;
-      border-right: 0.25rem solid #fff;
-      border-top: 0.25rem solid #fff;
+      border-right: 0.25rem solid $c-white;
+      border-top: 0.25rem solid $c-white;
       transform: rotate(135deg);
       transition: transform 250ms linear;
     }
@@ -39,7 +39,7 @@
     }
 
     &[aria-expanded='true'] {
-      background-color: #eee;
+      background-color: darken($c-white, 4%);
       color: $theme-primary;
     }
 
@@ -54,12 +54,12 @@
     padding: 0.875rem;
     margin-left: 0;
     margin-top: -0.25rem;
-    background-color: lighten(#7b80b5, 5%);
+    background-color: $theme-purple;
     color: $theme-primary;
     line-height: 1.5;
     font-family: sans-serif;
     font-size: 0.875rem;
-    border: 1px solid #eee;
+    border: 1px solid darken($c-white, 4%);
     box-shadow: 1px 4px 10px 1px rgba(0, 0, 0, 0.15);
     transition: all 200ms linear;
 
