--- a/src/scss/_element.text.scss
+++ b/src/scss/_element.text.scss
@@ -1,20 +1,54 @@
+@font-face {
+  font-family: 'Zoika';
+  src: url('../assets/Zoika.ttf')  format('truetype')
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 300;
+  src: url('../assets/Roboto-Light.ttf')  format('truetype')
+}
+
+$font-primary: 'Zoika', Fallback, sans-serif;
+$font-secondary: 'Roboto', sans-serif;
+
+.heading-wrapper {
+  position: relative;
+  top: 8vh;
+  display: inline-block;
+
+  h1 {
+    line-height: 1;
+    font-family: $font-primary;
+    font-size: 5rem;
+    margin-bottom: 0;
+    color: $theme-primary;
+  }
+
+  p {
+    font-family: $font-secondary;
+    font-size: 1.5rem;
+    text-align: left;
+    color: $theme-primary;
+  }
+}
+
 .component-heading {
-  font-size: 2.5rem;
+  font-family: $font-primary;
+  font-size: 4rem;
   text-align: center;
   margin: 0 auto 3rem;
 }
 
 h1 {
-  font-family: 'Playfair Display', serif;
-  font-size: 4rem;
   text-align: left;
   line-height: 1.5;
   margin: 2rem 0 4rem;
-  color: #222;
+  color: $theme-primary;
 }
 
 p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: $font-secondary;
   font-size: 0.875rem;
   margin-bottom: 0;
   text-align: center;
