--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,16 +1,18 @@
-$theme-primary: #222;
-$theme-secondary: #33a59b;
-$theme-ternary: #6D9DC5;
-
-.theme-home {
-  background-color: $theme-secondary;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23378d85' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}
+$theme-primary: #2b2a2e;
+$theme-green: lighten(#33a59b, 5%);
+$theme-blue: lighten(#6D9DC5, 5%);
+$theme-purple: lighten(#7b80b5, 5%);
+$theme-yellow: #f0f095;
+$c-white: #fff;
 
 .theme-modal {
-  background-color: $theme-ternary;
+  background-color: $theme-blue;
 }
 
 .theme-accordion {
-  background-color: #7b80b5;
+  background-color: $theme-purple;
+}
+
+.theme-showcase {
+  margin: 0;
 }
