--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap');
-
 @import 'theme';
-@import 'generalize';
-@import 'layout';
 @import 'element.text';
-@import 'note-card';
+@import 'header';
+@import 'layout';
+@import 'reveal-text';
+@import 'showcase';
+
+// Components
 @import 'modal';
 @import 'multi-select-accordion';
