--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -5,14 +5,22 @@ $theme-purple: lighten(#7b80b5, 5%);
 $theme-yellow: #f0f095;
 $c-white: #fff;
 
-.theme-modal {
-  background-color: $theme-blue;
-}
+// .theme-modal {
+//   background-color: $theme-blue;
+// }
 
-.theme-accordion {
-  background-color: $theme-purple;
-}
+// .theme-accordion {
+//   background-color: $theme-purple;
+// }
 
-.theme-showcase {
-  margin: 0;
+// .theme-showcase {
+//   margin: 0;
+// }
+
+.component-wrapper {
+  padding: 6rem;
+  margin: auto;
+  box-sizing: border-box;
+  min-height: 80vh;
+  background-color: #eee;
 }
