--- a/src/pug/pages/multi-select-accordion.pug
+++ b/src/pug/pages/multi-select-accordion.pug
@@ -7,7 +7,7 @@ block variables
 
 block content
   h1.component-heading Multi Select Accordion
-  section
+  section.component-wrapper
     dl.m-accordion
       dt
         button(aria-expanded="true" aria-controls="m-accordion-resources").m-accordion__button What resources did you use to build this?
