--- a/src/pug/pages/tabs.pug
+++ b/src/pug/pages/tabs.pug
@@ -8,6 +8,7 @@ block variables
 
 block content
   h1.component-heading Tabs
+  section.component-wrapper
     .tabs
       .tabs__nav(role="tablist")
         button(role="tab" aria-selected="true" aria-controls="tab-panel-1" tabindex="0")#tab-1.tabs__button Resources
