:sushi: update mobile styles

--- a/src/pug/pages/modal.pug
+++ b/src/pug/pages/modal.pug
@@ -3,7 +3,7 @@ extends ../layout
 block variables
   - let title = 'Modal';
   - let description = 'ingredients for building modern, performant, accessible websites';
-  - let mainClass = 'l--border no-js';
+  - let mainClass = 'no-js';
 
 block content
   h1.component-heading Modal
