--- a/src/pug/pages/multi-select-accordion.pug
+++ b/src/pug/pages/multi-select-accordion.pug
@@ -3,7 +3,7 @@ extends ../layout
 block variables
   - let title = 'Multi Select Accordion';
   - let description = 'ingredients for building modern, performant, accessible websites';
-  - let mainClass = 'theme-accordion l--border';
+  - let mainClass = 'theme-accordion';
 
 block content
   h1.component-heading Multi Select Accordion
