--- a/src/pug/pages/tabs.pug
+++ b/src/pug/pages/tabs.pug
@@ -3,7 +3,7 @@ extends ../layout
 block variables
   - let title = 'Tabs';
   - let description = 'ingredients for building modern, performant, accessible websites';
-  - let mainClass = 'theme-accordion l--border';
+  - let mainClass = 'theme-accordion';
 
 
 block content
