--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -57,15 +57,20 @@
 .modal {
 	position: absolute;
 	top: 2rem;
-	left: 19vw;
+	left: 10vw;
 	z-index: 2;
-	width: 60%;
+	width: 80%;
 	margin: auto;
 	margin-top: 2rem;
 	background-color: $c-white;
 	padding: 1rem 2rem;
 	box-sizing: border-box;
 	border: 2px solid $theme-blue;
+
+	@media (min-width: 32rem) {
+		left: 19vw;
+		width: 60%;
+  }
 	
 	&[aria-hidden='false'] {
 		display: block;
@@ -86,6 +91,8 @@
 
 	h1 {
 		font-size: 1.25rem;
+		font-family: sans-serif;
+		margin: 0.25rem auto;
 	}
 }
 
@@ -114,21 +121,29 @@
 	
 	&__label {
 		display: inline-block;
-		width: 4rem;
 		margin-top: 1rem;
-		margin-left: 1rem;
+		font-family: sans-serif;
+
+		@media (min-width: 32rem) {
+			margin-left: 1rem;
+			width: 4rem;
+		}
 	}
 	
 	&__input {
 		margin-bottom: 1rem;
 		height: 1.5rem;
-		width: 70%;
 		padding: 0.25rem 0.5rem;
 		font-weight: bold;
 		font-size: 1.125rem;
 		letter-spacing: 0.0625rem;
 		background-color: $c-white;
 		border: 2px solid $theme-blue;
+
+
+		@media (min-width: 32rem) {
+			width: 70%;
+		}
 		
 		&:focus {
 			color: $c-white;
