--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -14,6 +14,10 @@ $c-white: #fff;
   overflow: hidden;
 
   @media (min-width: 32rem) {
-    padding: 6rem;
+    padding: 4rem;
+    margin-left: 4rem;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
   }
 }
