:bento: move components into component folder

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -6,6 +6,6 @@
 @import 'showcase';
 
 // Components
-@import '../modal/modal';
-@import '../multi-select-accordion/multi-select-accordion';
-@import '../tabs/tabs';
+@import '../components/modal/modal';
+@import '../components/multi-select-accordion/multi-select-accordion';
+@import '../components/tabs/tabs';
